# nono

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOGENT.md  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: REQUEST-AGENT-PACKAGE.md  bug_report.md  config.yml  feature_request.md  onboarding_issue.yml
.github/scripts/: check-cli-doc-flags.sh
.github/workflows/: attest-release.yml  aur-publish.yml  build-check.yml  ci.yml  image-build.yml  phase-37-linux-resl.yml  phase-46-uat-backlog.yml  project-automation.yml  release.yml  sign-instruction-files.yml  spire.yml
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PHASE-41-TRACKER.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.6-MILESTONE-AUDIT.md
.planning/debug/: 40-rollback-status-cfg-gate.md  il-label-apply-access-denied.md
.planning/debug/resolved/: phase-37-post-fix-runtime.md  phase-37-resl-failure.md  (+2 more)
.planning/milestones/: v2.6-REQUIREMENTS.md  v2.6-ROADMAP.md
.planning/quick/260508-m99-broker-process-poc-minimal-rust-binary-t/poc-broker/: Cargo.toml
.planning/quick/260508-m99-broker-process-poc-minimal-rust-binary-t/poc-broker/src/: main.rs
bindings/c/: Cargo.toml
crates/nono/: Cargo.toml  README.md
crates/nono-cli/: Cargo.toml  README.md  build.rs
crates/nono-cli/benches/: eti_invoke.rs
crates/nono-cli/data/: network-policy.json  nono-profile.schema.json  policy.json  profile-authoring-guide.md
crates/nono-cli/src/: app_runtime.rs  audit_attestation.rs  audit_commands.rs  audit_integrity.rs  audit_ledger.rs  audit_session.rs  capability_ext.rs  cli.rs  cli_bootstrap.rs  command_policy.rs  command_runtime.rs  credential_broker.rs  credential_capture.rs  deprecated_schema.rs  diagnostic_formatter.rs  eti_runtime.rs  eti_token_broker.rs  exec_strategy.rs  execution_runtime.rs  format_util.rs  hook_runtime.rs  launch_runtime.rs  learn.rs  learn_runtime.rs  legacy_cleanup.rs  lineage_cgroup.rs  macos_trust.rs  main.rs  migration.rs  network_approval.rs  network_intent.rs  network_policy.rs  open_url_runtime.rs  output.rs  pack_update_hint.rs  package.rs  package_cmd.rs  package_status.rs  platform.rs  policy.rs  (+36 more)
crates/nono-cli/src/config/: mod.rs  user.rs
crates/nono-cli/src/diagnostic/: formatter.rs  mod.rs
crates/nono-cli/src/exec_strategy/: env_sanitization.rs  supervisor_linux.rs  supervisor_macos.rs
crates/nono-cli/src/exec_strategy_windows/: labels_guard.rs  launch.rs  mod.rs  network.rs  supervisor.rs
crates/nono-cli/src/notification/: linux.rs  macos.rs  mod.rs  windows.rs
crates/nono-cli/src/profile/: builtin.rs  credential_provider.rs  mod.rs
crates/nono-cli/src/tool-sandbox/: broker_store.rs  credentials.rs  dynamic_providers.rs  env.rs  mod.rs  policy.rs  protocol.rs  token_broker.rs
crates/nono-cli/src/tool-sandbox/platform/: linux.rs  macos.rs
crates/nono-cli/tests/: adr_aipc_unix_futures.rs  audit_attestation.rs  auto_pull_e2e_linux.rs  deny_overlap_run.rs  deprecated_policy.rs  deprecated_schema.rs  env_vars.rs  execution_strategy_run.rs  keyless_sign.rs  manifest_roundtrip.rs  profile_cli.rs  profile_cmd.rs  profile_drafts_test.rs  profile_validate_strict.rs  resl_nix_async_signal_safety.rs  resl_nix_linux.rs  rollback_run.rs  schema_cli_parity.rs  schema_shape.rs  sideload.rs  socket_access_run.rs  spiffe_run.rs  url_open_integration.rs  yaml_merge_reversal.rs
crates/nono-cli/tests/common/: test_env.rs
crates/nono-proxy/: Cargo.toml  README.md
crates/nono-proxy/src/: audit.rs  auth.rs  capture.rs  config.rs  connect.rs  credential.rs  diagnostic.rs  external.rs  filter.rs  forward.rs  jwt_phantom.rs  lib.rs  oauth2.rs  oauth_rewrite.rs  pool.rs  rate_limit.rs  reverse.rs  route.rs  server.rs  spiffe.rs  test_env.rs  token.rs
crates/nono-proxy/src/aws/: endpoints.rs  mod.rs  route.rs  sign.rs
crates/nono-proxy/src/oauth_capture/: endpoint.rs  jwt.rs  mod.rs  persist.rs  rewrite.rs
crates/nono-proxy/src/tls_intercept/: acceptor.rs  ca.rs  h2_forward.rs  h2_probe.rs  handle.rs  http1.rs  mod.rs  websocket.rs
crates/nono-proxy/tests/: proxy_auth_integration.rs  spiffe_integration.rs
crates/nono-shell-broker/: Cargo.toml
crates/nono-shell-broker/src/: main.rs
crates/nono/schema/: capability-manifest.schema.json
crates/nono/src/: audit.rs  capability.rs  diagnostic.rs  error.rs  keystore.rs  lib.rs  manifest.rs  manifest_convert.rs  net_filter.rs  path.rs  runtime_filter.rs  scrub.rs  state.rs
crates/nono/src/diagnostic/: codes.rs  detail.rs  mod.rs  observation.rs  records.rs  report.rs
crates/nono/src/resource/: mod.rs
crates/nono/src/sandbox/: linux.rs  macos.rs  mod.rs  windows.rs
crates/nono/src/supervisor/: mod.rs  socket.rs  types.rs
crates/nono/src/trust/: bundle.rs  dsse.rs  mod.rs  policy.rs  signing.rs  types.rs
crates/nono/src/undo/: snapshot.rs  types.rs
crates/nono/tests/: capability_manifest_schema.rs
docs/: docs.json
docs/architecture/: audit-bundle-target.md
examples/profiles/: claude-code-oauth-capture.json
issues/: sandbox-policy-split.md
local-profiles/: eti-intercept-approve.json  eti-intercept-bad-catch-all.json  eti-intercept-capture.json  eti-intercept-respond.json  kube.json
scripts/: build-rpm.sh  build-windows-msi.ps1  claude-clear-nono.sh  codex-clear-nono.sh  diagnose-macos-browser-open.sh  lint-docs.sh  probe-claude-open-path.sh  spiffe-mock-server.py  spire-test.sh  test-linux-container.sh  test-linux.sh  test-list-aliases.sh  test-windows-shell-write-deny.ps1  validate-windows-msi-contract.ps1
testdata/spire/: agent.conf  server.conf
tests/: run_integration_tests.sh
tests/integration/: test_audit.sh  test_bypass_protection.sh  test_edge_cases.sh  test_gpu.sh  test_network.sh  test_pack_resolution.sh  test_profiles.sh  test_rollback_dest_edge_cases.sh  test_silent_output.sh  test_system_paths.sh  test_trust_cli.sh  test_upstream_drift.sh
tests/lib/: test_helpers.sh
tools/: test-update-server.py
(+236 files in other folders)
