[package]
name = "nono-cli"
version = "0.53.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for nono capability-based sandbox"
readme = "README.md"
keywords = ["sandbox", "security", "cli", "landlock", "seatbelt"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.deb]
maintainer = "Luke Hinds"
copyright = "2026, Luke Hinds"
depends = "$auto, libc6 (>= 2.34)"
recommends = "1password-cli | gnome-keyring"
section = "utils"
priority = "optional"
assets = [
    ["target/release/nono", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/nono/README", "644"],
    ["../../LICENSE", "usr/share/doc/nono/LICENSE", "644"],
]
conf-files = ["/etc/nono/profiles/"]

[[bin]]
name = "nono"
path = "src/main.rs"

[features]
default = ["system-keyring"]
# Enables OS system keyring access (macOS Keychain / Linux Secret Service).
# Disable this for headless/container environments without libdbus.
# Controls keyring for nono-cli, nono, and nono-proxy in one flag.
system-keyring = ["dep:keyring", "nono/system-keyring", "nono-proxy/system-keyring"]
# Enables test-only trust root overrides used by the integration harness.
test-trust-overrides = []

[dependencies]
nono = { version = "0.53.0", path = "../nono", default-features = false }
nono-proxy = { version = "0.53.0", path = "../nono-proxy", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored = "3"
similar = "2"
rand = "0.10"
which = "8"
toml = "1.0"
dirs = "6"
walkdir = "2"
ignore.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Signing key PKCS#8 serialization (already transitive via sigstore-verify)
aws-lc-rs = "1"

# Keystore access for trust signing keys (optional: requires libdbus on Linux)
keyring = { version = "3", optional = true }

# Keyless (Sigstore/Fulcio/Rekor) signing for instruction file attestation
# Phase 37 Plan 37-06: bumped 0.6.5 → 0.7.0 alongside sigstore-verify 0.7.0
# (upstream sigstore-rust PR #85, released 2026-05-13). Adds "API for fetching /
# using the trust root (#69)" + "Avoid hashing the payload twice"; consumers
# (`crates/nono-cli/src/trust_cmd.rs`) call `sign_blob`-style APIs unchanged.
sigstore-sign = "0.7.0"
# YAML-merge directive support (Plan 36-02; upstream-aligned at v0.10.0 per 242d4917)
serde_yaml_ng = "=0.10.0"
tokio = { version = "1", features = ["rt", "net", "io-util"] }

ureq = { version = "3", features = ["platform-verifier"] }
semver = "1"
regress = "0.11"

zeroize.workspace = true
sha2.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"
tempfile = "3"
vt100 = "0.16.2"
shlex = "1"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true, features = ["process", "signal", "fs", "user", "term", "resource"] }
landlock = { workspace = true }
dns-lookup = "2"
keyring = { version = "3", features = ["sync-secret-service"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { workspace = true, features = ["process", "signal", "fs", "user", "term", "resource"] }
dns-lookup = "2"
keyring = { version = "3", features = ["apple-native"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
uuid = { version = "1", features = ["v4"] }
windows-service = "0.7"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_NetworkManagement_WindowsFilteringPlatform", "Win32_Networking_WinSock", "Win32_Security", "Win32_Security_Authorization", "Win32_Security_Cryptography", "Win32_Security_Cryptography_Catalog", "Win32_Security_Cryptography_Sip", "Win32_Security_WinTrust", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_Diagnostics_Etw", "Win32_System_EventLog", "Win32_System_JobObjects", "Win32_System_Memory", "Win32_System_Pipes", "Win32_System_Rpc", "Win32_System_Services", "Win32_System_SystemServices", "Win32_System_Threading"] }
keyring = { version = "3", features = ["windows-native"], optional = true }
ferrisetw = "1.2"
subtle = "2"
getrandom = { workspace = true }

[build-dependencies]
toml = "1.0"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
# Phase 41 D-14 (CR-04): nono-shell-broker is needed at integration-test time by
# broker_launch_assigns_child_to_job_object (exec_strategy_windows/launch.rs).
# Declaring it as a dev-dependency makes cargo build the broker artifact
# before running nono-cli tests — eliminating the manual `cargo build -p nono-shell-broker`
# step and the silent-SKIP failure mode (resolved by CR-04 / D-13).
nono-shell-broker = { path = "../nono-shell-broker", version = "0.53.0" }

[dev-dependencies]
httpmock = "0.7"
jsonschema = "0.46"
proptest = "1"
rcgen = "0.13"

[lints]
workspace = true
