[package]
name = "nono-proxy"
version = "0.65.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Network filtering proxy for the nono sandbox"
keywords = ["sandbox", "security", "proxy", "network"]
categories = ["network-programming", "web-programming"]

[features]
default = ["system-keyring", "spiffe"]
# Enables OS system keyring access (macOS Keychain / Linux Secret Service).
# Headless/container consumers opt out with default-features = false.
system-keyring = ["nono/system-keyring"]
# SPIFFE/SPIRE Workload API support for upstream mTLS and JWT-SVID auth.
# Embedders who do not need SPIFFE can opt out with default-features = false.
spiffe = ["dep:spiffe-workload", "dep:arc-swap", "dep:tokio-util"]

[dependencies]
nono = { version = "0.65.1", path = "../nono", default-features = false }
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
zeroize.workspace = true
sha2.workspace = true
getrandom.workspace = true
base64 = "0.22"
subtle = "2"
url.workspace = true
urlencoding = "2"
globset.workspace = true

# TLS for upstream connections (reverse proxy mode)
hyper-rustls = { version = "0.27", features = ["http1", "http2", "ring", "webpki-tokio"] }
# HTTP/2 framing for CONNECT-intercept h2 forwarding (gRPC support)
h2 = "0.4"
bytes = "1"
http = "1"
tower-service = "0.3"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "1"

# TLS interception (CONNECT-mode L7 filtering and credential injection):
# ephemeral session CA + per-host leaf certificate generation. `ring` matches
# the rustls crypto provider used elsewhere; `aws_lc_rs` is disabled to avoid
# a second, redundant crypto stack in the dependency tree.
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring", "x509-parser"] }
x509-parser = "0.18"
# Read the host's system trust store (used to compose the trust bundle that
# the sandboxed child consumes via SSL_CERT_FILE / REQUESTS_CA_BUNDLE / etc.).
# We need full DER certs for PEM emission; webpki-roots only ships parsed
# TrustAnchors, so it can't be the source for a system bundle.
rustls-native-certs = "0.8"
# Date/time used by `rcgen` for cert validity windows. Already pulled in as a
# transitive dep of rcgen; declared explicitly because we use OffsetDateTime
# directly to set not_before/not_after.
time = { version = "0.3", default-features = false, features = ["std"] }

# SPIFFE Workload API client for X.509-SVID mTLS and JWT-SVID bearer auth.
# Aliased to avoid colliding with any future `spiffe` naming in the workspace.
# Features: x509-source (streaming SVID rotation) + jwt-source (JWT fetch/refresh).
spiffe-workload = { package = "spiffe", version = "0.16", optional = true, features = ["x509-source", "jwt-source"] }
# Direct deps used in spiffe.rs (also transitive from spiffe-workload but must
# be declared directly when accessed in our own code).
arc-swap = { version = "1", optional = true }
tokio-util = { version = "0.7", optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { version = "1", features = ["test-util", "rt-multi-thread", "macros"] }

[lints]
workspace = true
