[package]
name = "nono"
version = "0.53.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Capability-based sandboxing library using Landlock (Linux) and Seatbelt (macOS)"
readme = "README.md"
keywords = ["sandbox", "security", "capability", "landlock", "seatbelt"]
categories = ["os", "api-bindings"]

[features]
default = ["system-keyring"]
# Enables OS system keyring access (macOS Keychain / Linux Secret Service).
# Headless/container consumers opt out with default-features = false.
system-keyring = ["dep:keyring"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
zeroize.workspace = true
sha2.workspace = true
getrandom = { workspace = true }
walkdir.workspace = true
ignore.workspace = true
globset.workspace = true
regress = "0.11"

# URL component parsing for fail-closed OIDC issuer pinning (D-11 / T-20-04-03)
url.workspace = true

# Unix socket IPC for supervisor
libc = "0.2"

# Keychain access (optional: requires libdbus on Linux)
keyring = { version = "3", optional = true }

# Sigstore bundle verification
# Phase 37 Plan 37-06: bumped 0.6.5 → 0.7.0 to pick up upstream sigstore-rust PR #85
# (merged 2026-04-29, released 2026-05-13). Breaking API: `VerificationPolicy::verify_sct: bool`
# field added — `::default()` and builder methods (`with_issuer`, `skip_sct`) are unaffected,
# and nono uses only those constructors (no struct-literal `VerificationPolicy { ... }` sites
# in-tree, verified via `grep -rnE "VerificationPolicy\s*\{" crates/`).
sigstore-verify = { version = "0.7.0", default-features = false, features = ["tuf"] }
x509-cert = { version = "0.2", default-features = false }
der = { version = "0.7", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
nix = { workspace = true, features = ["fs", "user"] }
keyring = { version = "3", features = ["sync-secret-service"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { workspace = true, features = ["fs", "user"] }
keyring = { version = "3", features = ["apple-native"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_JobObjects", "Win32_System_Pipes", "Win32_System_SystemServices", "Win32_System_Threading", "Wdk_System_SystemServices", "Win32_System_SystemInformation"] }
keyring = { version = "3", features = ["windows-native"], optional = true }

[build-dependencies]
typify = "0.6"
serde_json = "1"
syn = "2"
prettyplease = "0.2"

[dev-dependencies]
tempfile.workspace = true
jsonschema = "0.46"
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
