[workspace]
# Empty [workspace] section prevents Cargo from crawling up and inheriting the
# parent nono workspace. This crate is intentionally standalone.

[package]
name = "poc-broker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poc-broker"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Console",
] }
